[metadata]
name = urlpcap
version = 0.0.1
author = truesonofagun
description = Program for enumerating a URL to capture network traffic in pcap
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/truesonofagun/urlpcap
license = GPL-2.0
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE Version 2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	
[options]
packages = find:
install_requires =
	argparse >= 1.4.0

[options.entry_points]
console_scripts =
	urlpcap = __init__:start
